style.css
body{
    background-color: rgba(21, 18, 18, 0.906);
}

.filter{
    margin-top: 50px;
    background-color: white;
    width: 250px;
    height: 300px;
    padding-left: 15px;
    padding-top: 5px;
    border-radius: 10px;
    
}

.container{
    display: flex;
    justify-content: flex-start;

}

.post{
    background-color: rgb(190, 190, 190);
    width: 600px;
    height: 120px;
    border-radius: 10px;
    /* display: flex; */
    /* flex-direction: column; */
    margin-left: 50px;
    margin-bottom: 15px;

}

.posts{
    margin-top: 45px;
}

.articleTitle{
    font-weight: bold;
    font-family: Arial;
}

.articleHeader{
    display: flex;
    justify-content: space-between;
    padding: 5px;
    padding-top: 15px;
    align-items: start;
}

.articleDate{
    font-family: Arial; 
    color: rgb(97, 97, 97);
    font-size: x-small;
    font-weight: lighter;
    white-space: nowrap;
}

.articleImg img{
    border-radius: 10px;
    max-height: 60px;
}

.articleAbstract {
    font-family: Arial;
    font-size: small;
    margin-left: 7px;
}

